# Practica_PokeAPI

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
